* added source edit support for xoopslist class (mekdrop)
* added XOOPS_SYSTEM_AUTOTASKS to modules/system/constants.php (mekdrop)
* added _MI_SYSTEM_ADMENU25 to modules/system/language/english/modinfo.php (mekdrop)
* added Admin Config Preferences for HTMLPurifier Library. (vaughan)
* added New static protected class for uniquely dealing with Password related functions. (vaughan)

'''Improved'''
* Modified IcmsPersistableObjectHandler: if no module specified system think it's not a module (mekdrop)
* #666: Update HTMLPurifier Library to 4.0.0. (vaughan)
* #652: icmsStopSpammer causes blank page when the stopforumspam.org site is unavailable. (vaughan)
* #562 as part of 562, created new class icms.class.password.php, removed old password functions from functions.php (vaughan)
* Updated Protector module to 3.34 (Gijoe, Vaughan)
* #698: we are now using the default system editor to edit the content for blocks (Phoenyx)
* #570: changed th font color in impresstheme and impresstheme_light from white to black to make it readable (Phoenyx)
* #576: templates will no longer be checked for modifications by default for performance reasons (Phoenyx)
* #705: Module name in module preferences breadcrumb is linked to module administration now (Phoenyx)
* #294: replaced scraps with system comment function in imProfile | ticket from addons (Phoenyx)

'''Fixed'''
* #661: Uploader setPrefix may incorrectly assign filenames. (vaughan)
* #: Unable to login with email address, function getUnameFromUserEmail() was getting $uname & not $login_name. (vaughan)
* fixed class/icmsform/icmsform.php 723-728 lines (????) (mekdrop)
* #334: Videolayer is over the jQuery pictures (sato-san)
* #249: Path to ICMS_IMAGES_SET_URL corrected (sato-san)
* #657: Icons for adsense, rating and mime-types (sato-san)
* #728: Link to delete a block correced (sato-san)
* #731: Recommends changed > modules/ added. (sato-san)