@@ -504,3 +504,16 @@ tr.blocked td {background-color: #FF0000;}
 
 .imgcat_notwrite {background-color: #FF0000; width:20px; height: 17px; padding-top: 3px; overflow: visible; margin-bottom: 2px;}
 .imgcat_notwrite span{margin-left: 25px; display: block; width: 400px;}
+
+.caption-text img {float: right; padding-left: 5px; padding-top: 2px;}
+span.helptext {position: absolute; right: 30px; z-index: 9000; background-color:#000; outline:1px solid #669; border:2px solid #fff; padding:10px 15px; width:200px; display:none; color:#fff; text-align:left; font-size:12px;
+/* outline radius for mozilla/firefox only */ 
+outline-radius:4px; 
+-moz-outline-radius:4px; 
+-webkit-outline-radius:4px;
+/* opacity for Vaughan */ 
+filter:alpha(opacity=70);
+-moz-opacity:0.70;
+-khtml-opacity: 0.70;
+opacity: 0.70;
+}
