@@ -30,6 +30,7 @@ Revision:
 * added New static protected class for uniquely dealing with Password related functions. (vaughan)
 
 '''Improved'''
+* #751: cleanup admin preference pages, use tooltip boxes for form field descriptions. (vaughan/MrTheme)
 * Modified IcmsPersistableObjectHandler: if no module specified system think it's not a module (mekdrop)
 * #666: Update HTMLPurifier Library to 4.0.0. (vaughan)
 * #652: icmsStopSpammer causes blank page when the stopforumspam.org site is unavailable. (vaughan)
